[package]
name = "jupiter-invariant"
version = "0.1.0"
edition = "2021"
description = "Jupiter Invariant Integration"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.14.11"
solana-client = "1.14.11"
anyhow = "1.0"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation.git", branch = "main" }
jupiter = { git = "https://github.com/jup-ag/rust-amm-implementation.git", branch = "main" }
invariant-types = { git = "https://github.com/invariant-labs/protocol.git", branch = "remove-panics-from-invariant-types" }
anchor-lang = "0.26.0"
borsh = {version = "*", features = ["const-generics"]}
